adds html styles our service

--- a/index.css
+++ b/index.css
@@ -60,3 +60,22 @@ width: 500px;
     font-size: small;
     color: white;
 }
+.our_services{
+  
+    
+}
+.our_services .list{
+    display: flex;
+    justify-content: space-around;
+     
+}
+
+.our_services li{
+   list-style: none;
+    box-shadow:2px 3px 5px grey;
+}
+.our_services li img{
+    height: 150px;
+    width: 300px;
+   
+}
