--- a/index.css
+++ b/index.css
@@ -79,3 +79,22 @@ width: 500px;
     width: 300px;
    
 }
+.contact_us{
+    background-color: #3e81f5;
+    display: flex;
+    justify-content: space-around;
+    padding: 40px;
+    
+}
+.contact_us .contact_form{
+    padding: 20px;
+    background-color: white;
+}
+.contact_us .contact_form form>input{
+    width: 500px;
+    height: 50px;
+}
+.contact_us .contact_text{
+    width: 30%;
+    
+}
