adds html styles footer

--- a/index.css
+++ b/index.css
@@ -98,3 +98,8 @@ width: 500px;
     width: 30%;
     
 }
+.footer{
+    background-color: #101d37;
+    padding: 30px;
+    font-size: x-large;
+    color: rgb(158, 151, 151);
