add css updates

--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ width: 500px;
 
 .our_services li{
    list-style: none;
-    box-shadow:2px 3px 5px grey;
+    box-shadow:2px 3px 5px #808080;
     padding: 20px;
 }
 .our_services li img{
